add balancing functionality
